<?xml version="1.0"?>
<package format="2">
  <name>ros_node_utils</name>
  <version>0.0.0</version>
  <description>This package contains parent class for most generic ros node structure and helper methods for reading parameters from rosparam</description>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>tf</depend>


</package>
